--- a/index.html
+++ b/index.html
@@ -33,16 +33,16 @@
         <a-entity camera="" look-controls="" wasd-controls="" position="2.1282019312981433 0 5.586176709139529" rotation="-5.15662015617741 20.855663742761962 0"></a-entity>
       </a-entity>
       
-      <a-box position="-1 3.465 -5.205" rotation="0 45 0" src="https://cdn.glitch.com/b37a0928-b72f-4a70-bc30-94199ab79d08%2FC-WXcbPXgAI2zYX.jpg?1503148078156" scale="5 5 2" material="" geometry=""></a-box>
-      <a-sphere position="0 2.553 0.181" radius="1.25" src="https://cdn.glitch.com/b37a0928-b72f-4a70-bc30-94199ab79d08%2Fwhereisyourgod.m4v?1503155870707" material="" geometry="" rotation="0 268.9077853858336 0">
+      <a-box position="-1 3.465 -5.205" rotation="0 45 0" src="http://thecatapi.com/api/images/get?x=1" scale="5 5 2" material="" geometry=""></a-box>
+      <a-sphere position="0 2.553 0.181" radius="1.25" src="http://thecatapi.com/api/images/get?x=2" material="" geometry="" rotation="0 268.9077853858336 0">
        <a-animation attribute="rotation" dur="6000" fill="forwards" from="0 0 0" to="0 360 0" repeat="indefinite"></a-animation>
       </a-sphere>
-      <a-cylinder position="2.215 0.75 -3" radius="0.5" height="1.5" src="https://cdn.glitch.com/b37a0928-b72f-4a70-bc30-94199ab79d08%2Fo-JEFF-GOLDBLUM-facebook.jpg?1503147812794" rotation="20 10 30" material="" geometry=""></a-cylinder>
-      <a-plane position="-1.806 0 -4" rotation="354.074 5.926 354.074" width="4" height="4" src="https://cdn.glitch.com/b37a0928-b72f-4a70-bc30-94199ab79d08%2FCXK3EP6WAAAjeF-.jpg?1503148076033" scale="5 5 5" material="" geometry="">
+      <a-cylinder position="2.215 0.75 -3" radius="0.5" height="1.5" src="http://thecatapi.com/api/images/get?x=3" rotation="20 10 30" material="" geometry=""></a-cylinder>
+      <a-plane position="-1.806 0 -4" rotation="354.074 5.926 354.074" width="4" height="4" src="http://thecatapi.com/api/images/get?x=4" scale="5 5 5" material="" geometry="">
         <a-animation attribute="rotation" dur="60000" fill="forwards" from="360 0 360" to="0 360 0" repeat="indefinite"></a-animation></a-plane>
-      <a-sky material="src:https://cdn.glitch.com/b37a0928-b72f-4a70-bc30-94199ab79d08%2F3585D03B00000578-3655396-image-a-2_1466638278547.jpg?1503147905712; repeat: 20 20"><a-animation attribute="rotation" dur="60000" fill="forwards" from="360 0 360" to="0 360 0" repeat="indefinite"></a-animation></a-sky>
+      <a-sky material="src:http://thecatapi.com/api/images/get?x=5; repeat: 20 20"><a-animation attribute="rotation" dur="60000" fill="forwards" from="360 0 360" to="0 360 0" repeat="indefinite"></a-animation></a-sky>
     </a-scene>
-  <a-sound src="https://cdn.glitch.com/b37a0928-b72f-4a70-bc30-94199ab79d08%2Fhahahrawrrahaha.mp3?1503154901534" autoplay="true" position="0 2 5"></a-sound>
+  <a-sound src="http://thecatapi.com/api/images/get?x=6" autoplay="true" position="0 2 5"></a-sound>
     </a-scene>  
 
     <script>
